Added new feature for number of matches

--- a/keno_game.html
+++ b/keno_game.html
@@ -19,13 +19,13 @@
 <div id="winner"></div>
 <div id="payout">
 	<h2>Pays</h2>
-    One match = $10 <br>
-    Two = $100<br>
-    Three = $500<br>
-    Four = $1000<br>
-    Five = $5000<br>
-    Six = $10,000<br>
-    Seven = $$$$ Jackpot<br>
+    One match = <span id="one">$0</span><br>
+    Two = <span id="two">$0</span><br>
+    Three = <span id="three">$0</span><br>
+    Four = <span id="four">$0</span><br>
+    Five = <span id="five">$0</span><br>
+    Six = <span id="six">$0</span><br>
+    Seven = <span id="seven">$0</span><br>
 </div>
 </div>
 
@@ -43,6 +43,7 @@
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="events.js"></script>
 <script src="keno_game.js"></script>
 </body>
 </html>
