Changes to pays and random vals

--- a/keno_game.html
+++ b/keno_game.html
@@ -19,13 +19,13 @@
 <div id="winner"></div>
 <div id="payout">
 	<h2>Pays</h2>
-    One match = <span id="one">$0</span><br>
-    Two = <span id="two">$0</span><br>
-    Three = <span id="three">$0</span><br>
-    Four = <span id="four">$0</span><br>
-    Five = <span id="five">$0</span><br>
-    Six = <span id="six">$0</span><br>
-    Seven = <span id="seven">$0</span><br>
+    One match = <span id="p0">$0</span><br>
+    Two = <span id="p1">$0</span><br>
+    Three = <span id="p2">$0</span><br>
+    Four = <span id="p3">$0</span><br>
+    Five = <span id="p4">$0</span><br>
+    Six = <span id="p5">$0</span><br>
+    Seven = <span id="p6">$0</span><br>
 </div>
 </div>
 
