--- a/keno_game.html
+++ b/keno_game.html
@@ -11,7 +11,7 @@
 <div id="numbers">
 </div>
 
-<div id="jackpot"><span class="d">$</span><span id="dollars">0.00</span><h2>Jackpot</h2></div>
+<div id="jackpot"><h2>Jackpot: </h2><span class="jacks"></span></div>
 <div id="left">
 <h2>Numbers Chosen:</h2>
 <div id="chosen"></div>
@@ -31,11 +31,7 @@
 
 <div id="nav">
 	<span id="denom"></span>
-	<input type="button" class="buttons" value="Up" id="up">
 	<span id="bet_text"></span>
-	<input type="button" class="buttons" value="down" id="down">
-	<!--<input type="button" class="buttons" value="Max Bet" id="max">-->
-  <!--<input type="button" class="buttons" value="Random" id="ranPick">-->
 	<input type="button" class="buttons" value="Erase" id="clear">
 	<input type="button" class="buttons" value="Play" id="spin">
 	<div id="total" class="buttons"></div>
